Updates from Overleaf

--- a/thesis.tex
+++ b/thesis.tex
@@ -146,11 +146,11 @@
 %----------------------------- Abstract ------------------------------%
 %---------------------------------------------------------------------%
 \chapter*{Abstract}
-The success of Retrieval-Augmented Generation (RAG) applications in enterprises depends significantly on their quality and stability. However, without systematic evaluation, system administrators lack the data-driven insights necessary to identify weaknesses and justify improvement measures. This bachelor's thesis addresses this challenge through the design, development, and evaluation of a comprehensive analytics dashboard for the automatic success measurement of an internal enterprise GenAI application.
+Generative AI (GenAI) and especially Retrieval Augmented Generation (RAG) applications revolutionize the modern business world. Yet the success of RAG applications in enterprises is not guaranteed and the systems need to be maintained to generate high quality outputs. Without systematic evaluation, system administrators lack the data-driven insights necessary to identify weaknesses and develop improvements. This bachelor's thesis addresses this challenge through the design, development, and evaluation of an analytics dashboard for the automatic success measurement of an enterprise GenAI application.
 
-Based on the IS Success Model by DeLone and McLean and applying the Design Science Research methodology, an artifact in the form of an integrated dashboard was created in close collaboration with a development team. It offers administrators multifaceted insights into the dimensions of information quality and user behavior. The core implemented features include the AI-based evaluation of answer and document quality, the visualization of topic clusters using Topic Maps, and the analysis of Task Types. Combined views allow for the direct correlation of quality metrics with specific topics and tasks to precisely identify knowledge gaps and optimization potential.
+Following the IS Success Model (ISSM) by DeLone and McLean an Information System's success is determined by three quality factors: \textit{the information quality, the system quality and the service quality}. However, the current evaluation frameworks for RAG systems like RAGAS or ARES focus only on the \textit{information quality} provided by the system. Based on the ISSM an integrated dashboard was created in close collaboration with a development team applying the Design Science Research methodology. It offers administrators insights into all three quality dimensions to provide a more holistic perspective on RAG success. The core features implemented include the AI-based evaluation of answer and document quality, the visualization of topics appearing in the user requests and the analysis of the most important task types. Combined views allow for the direct correlation of quality metrics with specific topics and tasks to identify problems and optimization potential.
 
-The evaluation by the development team confirmed the dashboard's significant value and practical relevance. The feedback was particularly positive regarding the design and interactivity, while also providing important direction for future iterations, especially concerning the improvement of user guidance for non-technical users and the addition of drill-down functionalities to enhance actionability. Furthermore, a cost analysis revealed that the analytics functions add a manageable overhead of approximately 20\% to the LLM-related costs. In summary, this work provides a validated and practically tested foundation for the data-driven success measurement of enterprise GenAI systems.
+An evaluation with the development team confirmed the dashboard's significant value and practical relevance. Furthermore, a cost analysis revealed that the analytics functionalities add an increase of approximately 20\% to the already existing LLM-related costs. This cost increase is justified by the benefit provided by the dashboard. Despite the positive feedback by the development, the implemented dashboard should undergo practical testing with end users to enhance its capabilities. In summary, this work provides an internally validated foundation for the data-driven success measurement of enterprise GenAI systems and establishes the concept of a holistic perspective on RAG success.
 
 \tableofcontents
 
@@ -199,11 +199,11 @@ KMS                 &   Knowledge Management System \\
 \pagenumbering{arabic}
 
 \chapter{Introduction}
-Generative AI (GenAI) has seen explosive growth, exemplified by ChatGPT becoming the fastest-growing application in history. This rapid adoption highlights the immense potential of GenAI, not only in the private sector but also within the modern business world, where it is seen as a significant driver of corporate growth. Projections underscore this, suggesting that GenAI could increase Germany's GDP by up to \EUR{585} billion by 2040. For enterprise applications, \textbf{Retrieval-Augmented Generation (RAG)} has emerged as a particularly suitable technology, as it enhances Large Language Models (LLMs) by connecting them to proprietary knowledge bases. This approach improves the traceability of answers and reduces the risk of hallucinations by grounding the model in a specific data basis.
+ChatGPT reached 1 million users within 5 days after its launch in 2022 and became the fastest-growing application in history. This rapid growth highlights the huge potential of Generative AI (GenAI), not only in the private sector but also within the modern business world, where it is seen as a significant driver of corporate growth. Projections underscore this, suggesting that GenAI could increase Germany's GDP by up to \EUR{585} billion by 2040. For enterprise applications, \textbf{Retrieval-Augmented Generation (RAG)} has emerged as a particularly suitable technology, as it connects Large Language Models (LLMs) to company-specific proprietary knowledge bases. Connecting and bounding the LLM to the proprietary knowledge bases not only lets it access up-to-date company data but also improves transparency and avoids hallucinations because now the company data functions as the ground truth.
 
-Despite these advantages, the success of enterprise RAG applications is not guaranteed. These systems can be unstable, leading to incorrect or inadequate results. Common failure points include the system failing to provide an answer even when the information is available, generating a false answer by misinterpreting context, or returning an incomplete response. As organizations invest in and deploy these powerful but complex systems, a critical management challenge emerges: How can the success of a GenAI application be reliably measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ultimately ensure that the system delivers a positive return on investment.
+However, the success of enterprise RAG applications is not guaranteed. These systems can be unstable, leading to low-quality results. Common failure points include the system failing to provide an answer even when the information is available, generating a false answer by misinterpreting context, or returning an incomplete response. As organizations invest in and deploy these powerful but complex systems, a critical management challenge emerges: How can the success of a GenAI application be reliably measured and monitored over time? Without systematic evaluation, system administrators lack the data-driven insights needed to identify weaknesses, justify improvements, and ensure that the system delivers a positive return on investment.
 
-This thesis addresses this management challenge directly. It documents the design, development, and evaluation of a comprehensive analytics dashboard created to automatically measure the success of an enterprise GenAI application. Grounded in the theoretical framework of the DeLone and McLean IS Success Model, the artifact provides system administrators with multifaceted insights into information quality, system performance, and user interaction patterns. Following a Design Science Research (DSR) methodology, the features of this dashboard were conceptualized and evaluated in close collaboration with the development team of an existing RAG system, ensuring both academic rigor and practical relevance.
+This thesis addresses this management challenge directly. It documents the design, development, and evaluation of an analytics dashboard created to automatically measure the success of an enterprise GenAI application. Grounded in the theoretical framework of the DeLone and McLean IS Success Model, the artifact provides system administrators with insights into the three ISSM quality metrics - information quality, system quality and serive quality. Following a Design Science Research (DSR) methodology, the features of this dashboard were conceptualized and evaluated in close collaboration with the development team of an existing RAG system, ensuring both academic and practical relevance.
 %---------------------------------------------------------------------%
 %------------------------------ Theoretical Background ---------------%
 %---------------------------------------------------------------------%
