--- a/references.bib
+++ b/references.bib
@@ -57,3 +57,8 @@
   year = {1989},
   publisher = {Management Information Systems Research Center, University of Minnesota}
 }
+
+@misc{citation-key,
+    key = ,
+    note = 
+}
